cilium-cli/connectivity/builder/manifests/client-egress-to-echo-expression-deny-ccnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: client-egress-to-echo-expression-deny-ccnp
spec:
  endpointSelector:
    matchExpressions:
    - { key: 'name', operator: In, values: [ 'client' ] }
  egressDeny:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
    toEndpoints:
    - matchExpressions:
      - { key: 'kind', operator: In, values: [ "echo" ] }
